# soundlore

./: .env.sample  .gitignore  Cargo.toml  Justfile  LICENSE  README.md  bacon.toml  cog.toml  mise.toml  package.json  pnpm-lock.yaml
.cargo/: config.toml
.zed/: tasks.json
hooks/: commit-msg.sh  pre-push.sh
migrations/: 0003_add_track_file_path_unique_index.sql  0004_rename_tracks_table_to_track.sql  0005_add_additional_track_metadata.sql  0006_add_frames_column_to_track_table.sql  0007_make_track_ids_incrementing_indexes.sql
snapshots/: ui__widgets__table__tests__should_click_second_header-tiny-skia.sha256  ui__widgets__table__tests__should_double_click_first_row-tiny-skia.sha256  ui__widgets__table__tests__should_drag_and_select_rows-tiny-skia.sha256  ui__widgets__table__tests__should_range_select_already_selected_rows-tiny-skia.sha256  ui__widgets__table__tests__should_scroll_to_and_select_table_row_at_the_half_of_the_table-tiny-skia.sha256  ui__widgets__table__tests__should_scroll_to_the_end_of_the_table-tiny-skia.sha256  ui__widgets__table__tests__should_scroll_to_the_end_of_the_table_with_mouse_wheel-tiny-skia.sha256  ui__widgets__table__tests__should_select_all-tiny-skia.sha256  ui__widgets__table__tests__should_select_first_row-tiny-skia.sha256  ui__widgets__table__tests__should_toggle_already_selected_rows-tiny-skia.sha256  ui__widgets__table__tests__should_toggle_select_rows-tiny-skia.sha256  ui__widgets__table__tests__should_union_select_already_selected_rows-tiny-skia.sha256
src/: App.tsx  app.rs  config.rs  constants.rs  error.rs  event.rs  lib.rs  log.rs  main.rs  message.rs  outcome.rs  services.rs  traits.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_create_initial_schema.sql  0002_create_tracks_table.sql
src-tauri/src/: config.rs  context.rs  error.rs  lib.rs  main.rs
src-tauri/src/core/: database.rs  migrations.rs
src-tauri/src/database/: migrations.rs
src-tauri/src/file/: utils.rs
src-tauri/src/scanner/: commands.rs  service.rs
src-tauri/src/track/: repository.rs  service.rs
src-tauri/src/tracks/: models.rs  repository.rs  service.rs
src/core/: database.rs  migrations.rs
src/database/: database.rs  migrations.rs  mod.rs
src/file/: utils.rs
src/playback/: README.md  constants.rs  decode.rs  engine.rs  error.rs  event.rs  handler.rs  mod.rs  pipeline.rs
src/playback/engine/: constants.rs  device.rs  mod.rs  thread.rs  thread_test.rs
src/playback/pipeline/: builder.rs  channel_converter.rs  command.rs  config.rs  decoder.rs  event.rs  event_emitter.rs  mod.rs  resampler.rs  sink.rs  thread.rs  track.rs
src/playback/pipeline/stage/: mod.rs
src/playback/pipeline/stage/channel_converter/: mod.rs  stage.rs
src/playback/pipeline/stage/decoder/: mod.rs  stage.rs
src/playback/pipeline/stage/resampler/: mod.rs  stage.rs
src/scanner/: service.rs
src/subscriptions/: audio_pipeline_thread_events.rs  mod.rs
src/test/: assert.rs  mod.rs  snapshot.rs  utils.rs
src/track/: file.rs  metadata.rs  mod.rs  models.rs  repository.rs  service.rs  utils.rs
src/track/repository/: mod.rs  select.rs  upsert.rs
src/ui/: icons.rs  mod.rs  utils.rs
src/ui/components/: mod.rs
src/ui/components/explorer_pane/: handler.rs  mod.rs
src/ui/components/main_pane/: handler.rs  mod.rs
src/ui/components/navigation_bar/: handler.rs  mod.rs  navigation_bar_menu.rs
src/ui/components/playback_bar/: handler.rs  mod.rs  widgets.rs
src/ui/components/queue_pane/: handler.rs  mod.rs
src/ui/components/status_bar/: handler.rs  mod.rs
src/ui/components/track_information_pane/: handler.rs  mod.rs
src/ui/theme/: color.rs  mod.rs  palette.rs  sizes.rs
src/ui/theme/catalog/: application.rs  button.rs  container.rs  menu_bar.rs  mod.rs  scrollable.rs  slider.rs  split.rs  table.rs  text.rs
src/ui/utils/: label.rs  mod.rs  pane.rs  select.rs  table.rs
src/ui/utils/table/: column.rs  column_test.rs  mod.rs  virtualization.rs
src/ui/widgets/: icons.rs  menu.rs  mod.rs  table.rs
src/ui/widgets/table/: bounds.rs  draw.rs  layout.rs  mod.rs  mouse.rs  state.rs  style.rs  tests.rs  update.rs  widget.rs
src/ui/widgets/table/event/: hover.rs  keyboard.rs  mod.rs  mouse.rs  position.rs  redraw.rs  scroll.rs  select.rs
src/ui/widgets/table/widget/: draw.rs  layout.rs  mod.rs  mouse.rs  scroll.rs  select.rs  update.rs
tests/app/: main.rs
tests/app/playback/: assert.rs  mod.rs  utils.rs
tests/app/scan/: constants.rs  mod.rs
tests/common/: app.rs  assert.rs  async_runtime.rs  constants.rs  database.rs  emulation.rs  file.rs  generator.rs  log.rs  mod.rs  models.rs  track.rs
tests/common/playback/: engine.rs  mod.rs
tests/playback/: main.rs
tests/scan/: contants.rs  main.rs
