[package]
name = "nameless-music-player"
version = "0.1.0"
description = "A Music Player App"
authors = ["ArturoAHR"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nameless_music_player_lib"

[dependencies]
iced = { version = "0.14.0", features = ["tokio"] }
iced_aw = { version = "0.13.0", default-features = false, features = ["menu", "context_menu", "quad"] }
sea-query = { version = "1.0.0-rc.32", features = ["derive", "backend-sqlite"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "migrate",
] }
tokio = { version = "1.52.3" }
thiserror = "2"
walkdir = "2"
symphonia = { version = "0.6.0", features = ["all"] }
uuid = { version = "1.23.1", features = ["v4"] }
sea-query-sqlx = { version = "0.8.0-rc.14", features = ["sqlx-sqlite"] }
dirs = "6.0.0"
rfd = "0.17.2"
tracing = { version = "0.1.44", features = ["max_level_trace", "release_max_level_info"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.5"
dotenvy = "0.15.7"
cpal = "0.17.3"
rtrb = "0.3.4"

[dev-dependencies]
ffmpeg-sidecar = "2.5.1"
futures = "0.3.32"
iced_test = "0.14.0"
pretty_assertions = "1.4.1"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
