[package]
name = "soundlore"
version = "0.1.0"
description = "A fast local music library where you design your own tagging systems and every tag becomes a playlist you can mix."
authors = ["ArturoAHR"]
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "soundlore_lib"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

missing_const_for_fn = "allow"
must_use_candidate = "allow"
suboptimal_flops = "allow"


[features]
development = ["iced/debug"]
testing = ["dep:iced_test"]

[dependencies]
iced = { version = "0.14.0", features = ["tokio", "advanced"] }
iced_aw = { version = "0.14.1", default-features = false, features = ["menu", "context_menu", "quad"] }
sea-query = { version = "1.0.0-rc.32", features = ["derive", "backend-sqlite"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "migrate",
] }
tokio = { version = "1.52.3" }
thiserror = "2"
walkdir = "2"
symphonia = { version = "0.6.0", features = ["all"] }
uuid = { version = "1.23.1", features = ["v4"] }
sea-query-sqlx = { version = "0.8.0-rc.14", features = ["sqlx-sqlite"] }
dirs = "6.0.0"
rfd = "0.17.2"
tracing = { version = "0.1.44", features = ["max_level_trace", "release_max_level_info"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.5"
dotenvy = "0.15.7"
cpal = "0.17.3"
rtrb = "0.3.4"
rubato = "3.0.0"
iced_split = "0.1.0"
iced_palace = "0.14.0"
palette = "0.7.6"
itertools = "0.15.0"

# For testing utils
iced_test = { version = "0.14.0", optional = true }

[dev-dependencies]
iced_test = "0.14.0"
ffmpeg-sidecar = "2.5.1"
futures = "0.3.32"
pretty_assertions = "1.4.1"
rayon = "1.12.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
